--- a/src/globals/base.scss
+++ b/src/globals/base.scss
@@ -2,4 +2,5 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: var(--grey-200);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
